<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/masterpeices_padding"
        android:background="@drawable/round_rectangle"
        android:padding="@dimen/masterpeices_padding">
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/masterpeices_left_padding"
            android:src="@drawable/starry_night"
            android:layout_marginRight="@dimen/masterpeices_padding"/>
        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/title1"
            android:layout_toRightOf="@id/imageView1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author1"
            android:layout_below="@+id/title1"
            android:layout_toRightOf="@+id/imageView1"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/masterpeices_padding"
        android:background="@drawable/round_rectangle"
        android:padding="@dimen/masterpeices_padding">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/masterpeices_left_padding"
            android:src="@drawable/still_life_with_kettle"
            android:layout_marginRight="@dimen/masterpeices_padding"/>
        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/title2"
            android:layout_toRightOf="@id/imageView2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author2"
            android:layout_below="@+id/title2"
            android:layout_toRightOf="@+id/imageView2"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/masterpeices_padding"
        android:background="@drawable/round_rectangle"
        android:padding="@dimen/masterpeices_padding">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/masterpeices_left_padding"
            android:src="@drawable/the_angelus"
            android:layout_marginRight="@dimen/masterpeices_padding"/>
        <TextView
            android:id="@+id/title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/title3"
            android:layout_toRightOf="@id/imageView3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author3"
            android:layout_below="@+id/title3"
            android:layout_toRightOf="@+id/imageView3"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/masterpeices_padding"
        android:background="@drawable/round_rectangle"
        android:padding="@dimen/masterpeices_padding">
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/masterpeices_left_padding"
            android:src="@drawable/the_cliff_of_aval"
            android:layout_marginRight="@dimen/masterpeices_padding"/>
        <TextView
            android:id="@+id/title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/title4"
            android:layout_toRightOf="@id/imageView4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author4"
            android:layout_below="@+id/title4"
            android:layout_toRightOf="@+id/imageView4"/>
    </RelativeLayout>
</LinearLayout>